tests/approval/snapshots/approval_postgres__server_info.snap
---
source: tests/approval/postgres.rs
expression: info
---
{
  "protocolVersion": "2025-06-18",
  "capabilities": {
    "tools": {}
  },
  "serverInfo": {
    "name": "database-mcp",
    "title": "Database MCP Server",
    "version": "[version]",
    "description": "Database MCP Server for MySQL, MariaDB, PostgreSQL, and SQLite",
    "websiteUrl": "https://database.haymon.ai"
  }
}
